finalizando rota de usuario
