# app/routes/user.route.ts
@@ -8,6 +8,7 @@ UserRoute.get('/find', authMiddleware, userController.find);
 UserRoute.get('/findById/:id', authMiddleware, userController.findById);
 UserRoute.put('/update', authMiddleware, userController.update);
 UserRoute.delete('/delete/:id', authMiddleware, userController.delete);
+UserRoute.post('/create', userController.create);
 UserRoute.post('/signUp', userController.signUp);
 UserRoute.post('/login', userController.login);
 
