# swagger.json
@@ -169,6 +169,53 @@
                 }
             }
         },
+        "/users/create": {
+            "post": {
+                "sumary": "Cadastra um novo usuário em uma empresa já registrada no sistema",
+                "description": "Essa rota será responsável por cadastrar um novo usuário em uma empresa já registrada no sistema",
+                "tags": ["User"],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/User"
+                            },
+                            "examples": {
+                                "company": {
+                                    "value": {
+                                        "nome": "Adel",
+                                        "cpf": "78390646061",
+                                        "email": "adel@gmail.com",
+                                        "celular": "31973491438",
+                                        "senha": "12345678",
+                                        "dataNascimento": "27/09/1999"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Não autorizado"
+                    },
+                    "400": {
+                        "description": "Usuário já cadastrado"
+                    },
+                    "200": {
+                        "description": "Cadastro realizado com sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/signUp": {
             "post": {
                 "sumary": "Cadastra um novo usuário",
